# 3A_AI_exercise

./: README.md  pyproject.toml
cv/: create_db.py  dataset.py  network.py  network_db.py  search.py  test_mnist_mlp.py  train_cifar10.py  train_mnist_cnn.py
cv/scripts/: run_cifar10_cnn.sh  run_create_db.out  run_create_db.sh  run_create_db_fc6.out  run_mnist_cnn.out  run_mnist_cnn.sh  run_mnist_mlp.out  run_mnist_mlp.sh  run_mnist_mlp_10000node.out  run_mnist_mlp_10000node.sh  run_mnist_mlp_3node.out  run_mnist_mlp_3node.sh  run_resnet_cifar2.out  run_search.out  run_search.sh  run_search_fc6.out  test_mnist_mlp.out  test_mnist_mlp.sh  test_mnist_with_confidence.out
nlp rl/nlp/: language_model_lstm.py  language_model_lstm_test.py  language_model_lstm_train.py  sentence_data.py
nlp rl/nlp/trained_model/: langage_model_lstm_1.model  langage_model_lstm_10.model  langage_model_lstm_2.model  langage_model_lstm_3.model  langage_model_lstm_4.model  (+25 more)
nlp rl/rl/: answer_sheet.md  main.py  slurm-1262039.out  slurm-1262044.out  slurm-1262051.out  slurm-1262060.out
speech/conf/: eval.list  train.list
speech/model/: vcmodel.model
speech/scripts/: run_conversion.out  run_conversion.sh  run_convert_both.out  run_convert_both.sh  run_convert_differential.sh  run_convert_differential_f0.sh  run_convert_f0.sh  run_frame_alignment.sh  run_make_acoustic_features.sh  run_train.out  run_train.sh  slurm-1279622.out
speech/src/: conversion.py  convert_both.py  convert_differential.py  convert_differential_f0.py  convert_f0.py  frame_alignment.py  make_acoustic_features.py  train.py
(+15 files in other folders)
