[tool.poetry]
name = "3a_ai_exercise"
version = "0.1.0"
description = ""
authors = ["howarudo <howardtangkulung@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
gym = "0.22.0"
pyworld = "^0.3.4"
pysptk = "^1.0.1"
dt = "^1.1.65"
PyYAML = "^6.0.2"
numpy = "1.26.0"
torchvision = "0.14.1"
pygame = "^2.6.1"
matplotlib = "^3.9.2"
dtw = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
